@@ -104,6 +104,7 @@ Fixes, minor enhancements, and performance improvements:
   - Fix improper handling of unsupported pixel data types. (#818) (1.4.5)
   - Accept pixel ratio (x/0) to mean 1.0, not NaN. (#834) (1.4.5/1.3.13)
   - Pad subimages to 8k boundaries, as suggested by the DPX spec (1.4.7)
+  - Properly write "userdata" field to DPX files if set. (1.4.7)
 * PNG:
   - add "png:compressionlevel" and "compression" strategy attributes.
     (1.3.12/1.4.2)
